package com.mgriffin.designpatterns.console;

public interface WordsOfWisdom {
    String getMessage ();
}
